--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body {
     font-size: 16px;
     color: #333;
     text-align: center;
-    font-family: "Arial",sans-serif;
+    font-family: "Courier",sans-serif;
     margin: 0;
     padding: 0;
 }
