Agregue suscripcion, cambié la cabecera maestra y puse todo azul

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body {
     font-size: 16px;
-    color: #333;
+    color: #00f;
     text-align: center;
     font-family: "Arial",sans-serif;
     margin: 0;
