--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,3 +37,11 @@ body {
 #post {
     padding: 1em;
 }
+
+#footer {
+    background-color: #888;
+    color: #fff;
+    text-align: center;
+    padding: 1em;
+    font-weight: bold;
+}
